--- a/website/index.html
+++ b/website/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
 <!-- Create an h1 header that is linked back to your homepage -->
- <!-- TODO: Update url after link to github pages -->
-<h1>BryllupRagnhildJørgen | <a href="./index.html">bryllup-til-ragnhild-og-jorgen.com</a></h1> 
+<h1>BryllupRagnhildJørgen</h1> 
 <!-- Create an h4 header that is linked to your various subpages and links -->
 <h4><a href="./blog/blog.html">Blog</a> | 
     <a href="./now.html">Now</a>
