--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 <!-- Create an h1 header that is linked back to your homepage -->
-<h1>BryllupRagnhildJørgen</h1> 
+ <!-- TODO: Update url after link to github pages -->
+<h1>Bryllup til Ragnhild og Jørgen | <a href="./index.html">Hjemside</a></h1> 
 <!-- Create an h4 header that is linked to your various subpages and links -->
 <h4><a href="./blog/blog.html">Blog</a> | 
     <a href="./now.html">Now</a>
