--- a/website/index.html
+++ b/website/index.html
@@ -1,27 +1,28 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<!-- Add your page name and sitename for the page's metadata -->
-<title>Home | Bryllup til Ragnhild og Jørgen</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Make sure to use the proper relative path to your CSS file! -->
-<link rel="stylesheet" href="./style.css"> 
-</head>
-<body>
-<!-- Create an h1 header that is linked back to your homepage -->
- <!-- TODO: Update url after link to github pages -->
-<h1>Bryllup til Ragnhild og Jørgen | <a href="./index.html">Hjemside</a></h1> 
-<!-- Create an h4 header that is linked to your various subpages and links -->
-<h4><a href="./blog/blog.html">Blog</a> | 
-    <a href="./now.html">Now</a>
-<hr>
-<!-- Create an h2 header for the title of this home page -->
-<h2>Bryllup til Ragnhild og Jørgen</h2>
-<!-- Add content and use <p> tags for line breaks -->
-<p>
-CONTENT
-<p>
-CONTENT
-</body>
+  <head>
+    <meta charset="utf-8">
+    <!-- Add your page name and sitename for the page's metadata -->
+    <title>Bryllup til Ragnhild og Jørgen</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Make sure to use the proper relative path to your CSS file! -->
+    <link rel="stylesheet" href="./style.css"> 
+  </head>
+  <body>
+    <!-- Create an h1 header that is linked back to your homepage -->
+    <h1>Bryllup til Ragnhild og Jørgen | <a href="./index.html">Hjemside</a></h1> 
+    <!-- Create an h4 header that is linked to your various subpages and links -->
+    <h4><a href="./info/onskeliste.html">Ønskeliste</a> | 
+        <!-- <a href="./now.html">Now</a> -->
+    <hr>
+    <!-- Create an h2 header for the title of this home page -->
+    <h2>Bryllup til Ragnhild og Jørgen</h2>
+    <!-- Add content and use <p> tags for line breaks -->
+    <p>
+    CONTENT
+    </p>
+    <p>
+    CONTENT
+    </p>
+  </body>
 </html>
