--- a/website/info/onskeliste.html
+++ b/website/info/onskeliste.html
@@ -12,14 +12,14 @@
     <!-- Create an h1 header that is linked back to your homepage -->
     <h1>Hjemside | <a href="./../index.html">Hjemside</a></h1>
     <!-- Create an h4 header that is linked to your various subpages and links -->
-    <h4><a href="./onskeliste.html">Ønskeliste</a> | 
     <hr>
     <!-- Create an h2 header for the title of this blog overview page -->
     <h2>Ønskeliste</h2>
     <!-- Add content and use <ul> and <li> tags for bulleted lists <p> tags for line breaks -->
     <!-- This is a great place to link to your most recent blog posts -->
     <p>
-      CONTENT
+      <!-- List of items we wish for our wedding. Should be possible to mark as bought in ui -->
+      <!-- Alternative: Tilbords ønskeliste link -->
     </p>
 </body>
 </html>
