--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
     <!-- Create an h1 header that is linked back to your homepage -->
     <h1>Bryllup til Ragnhild og Jørgen | <a href="./index.html">Hjemside</a></h1> 
     <!-- Create an h4 header that is linked to your various subpages and links -->
-    <h4><a href="./info/onskeliste.html">Ønskeliste</a> | </h4>
+    <h4>
+      <a href="./info/onskeliste.html">Ønskeliste</a>
+      |
+      <a href="./info/overnattingOgTransport.html">Overnatting og transport</a>
+    </h4>
         <!-- <a href="./now.html">Now</a> -->
     <hr>
     <!-- Create an h2 header for the title of this home page -->
     <h2>Bryllup til Ragnhild og Jørgen</h2>
     <!-- Add content and use <p> tags for line breaks -->
     <div id="hjemmesideTekst"></div>
-    <!-- <p>
-    CONTENT
-    </p> -->
+
     <script>
     fetch('./text-files/hjemmeside.txt')
       .then(response => response.text())
