--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <!-- Create an h1 header that is linked back to your homepage -->
-    <h1>Bryllup til Ragnhild og Jørgen | <a href="./index.html">Hjemside</a></h1> 
+    <h1>Bryllup til Ragnhild og Jørgen</h1> 
     <!-- Create an h4 header that is linked to your various subpages and links -->
     <h4>
       <a href="./info/onskeliste.html">Ønskeliste</a>
@@ -24,11 +24,12 @@
     <!-- Add content and use <p> tags for line breaks -->
     <div id="hjemmesideTekst"></div>
 
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script>
-    fetch('./text-files/hjemmeside.txt')
+    fetch('./text-files/hjemmeside.md')
       .then(response => response.text())
       .then(data => {
-        document.getElementById('hjemmesideTekst').textContent = data;
+        document.getElementById('hjemmesideTekst').innerHTML = marked.parse(data);
       });
     </script>
   </body>
