--- a/index.html
+++ b/index.html
@@ -13,20 +13,18 @@
     <h1>Bryllup til Ragnhild og Jørgen</h1> 
     <!-- Create an h4 header that is linked to your various subpages and links -->
     <h4>
-      <a href="./info/onskeliste.html">Ønskeliste</a>
+      <a href="./page/onskeliste.html">Ønskeliste</a>
       |
-      <a href="./info/overnattingOgTransport.html">Overnatting og transport</a>
+      <a href="./page/overnattingOgTransport.html">Overnatting og transport</a>
     </h4>
         <!-- <a href="./now.html">Now</a> -->
     <hr>
-    <!-- Create an h2 header for the title of this home page -->
-    <h2>Bryllup til Ragnhild og Jørgen</h2>
     <!-- Add content and use <p> tags for line breaks -->
     <div id="hjemmesideTekst"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script>
-    fetch('./text-files/hjemmeside.md')
+    fetch('./text-file/hjemmeside.md')
       .then(response => response.text())
       .then(data => {
         document.getElementById('hjemmesideTekst').innerHTML = marked.parse(data);
